--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest --watchAll",
-    "start": "nodemon app_server.js",
-    "start-node": "node app_server.js"
+    "start": "node app.js",
+    "server": "nodemon app.js"
   },
   "author": "Jia Jun Yong",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@shelf/jest-mongodb": "^1.1.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "jest": "^26.0.1",
